Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <h1>Dataspin Analytics SDK for Unity3D</h1>
         <p>Dataspin is an all-in-one back-end solution to manage your game and help you earn more.</p>
 
-        <p class="view"><a href="https://github.com/Dataspin/Dataspin_2.0-Unity-Plugin">View the Project on GitHub <small>Dataspin/Dataspin_2.0-Unity-Plugin</small></a></p>
+        <p class="view"><a href="https://github.com/Dataspin/Dataspin-Unity-Plugin">View the Project on GitHub <small>Dataspin/Dataspin-Unity-Plugin</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/Dataspin/Dataspin_2.0-Unity-Plugin/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/Dataspin/Dataspin_2.0-Unity-Plugin/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/Dataspin/Dataspin_2.0-Unity-Plugin">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/Dataspin/Dataspin-Unity-Plugin/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/Dataspin/Dataspin-Unity-Plugin/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/Dataspin/Dataspin-Unity-Plugin">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
